force-app/main/default/objects/Demand_Raised__c/fields/Booking_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Name__c</fullName>
    <formula>Booking__r.Plot__r.Name +&apos; &apos;+ Booking__r.Project1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Name</label>
    <type>Text</type>
</CustomField>