force-app/main/default/objects/Demand_Raised__c/fields/Demand_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Demand_Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Email Send</label>
    <type>Checkbox</type>
</CustomField>