force-app/main/default/objects/Demand_Raised__c/fields/Demand_Name__c.field-meta.xml
<CustomField>
    <fullName>Demand_Name__c</fullName>
    <label>Demand Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>