force-app/main/default/objects/Demand_Raised__c/fields/Demand_No__c.field-meta.xml
<CustomField>
    <fullName>Demand_No__c</fullName>
    <label>Demand No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>