force-app/main/default/objects/Demand_Raised__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand Raised</fullName>
                <default>true</default>
                <label>Demand Raised</label>
            </value>
            <value>
                <fullName>Demand Cancelled</fullName>
            </value>
            <value>
                <fullName>Demand Reversed</fullName>
            </value>
            <value>
                <fullName>Credit Note Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>