force-app/main/default/objects/Demand_Raised__c/fields/Disable_Demand_Mail__c.field-meta.xml
<CustomField>
    <fullName>Disable_Demand_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Demand Mail</label>
    <type>Checkbox</type>
</CustomField>