force-app/main/default/objects/Demand_Raised__c/fields/Due_Date_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Payment_Schedule__c</fullName>
    <formula>Payment_schedule__r.PaymentDueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date(Payment Schedule)</label>
    <type>Date</type>
</CustomField>