force-app/main/default/objects/Demand_Raised__c/fields/Interest_Till_Now__c.field-meta.xml
<CustomField>
    <fullName>Interest_Till_Now__c</fullName>
    <label>Interest Till Now</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>