force-app/main/default/objects/Demand_Raised__c/fields/Is_Last__c.field-meta.xml
<CustomField>
    <fullName>Is_Last__c</fullName>
    <formula>Payment_schedule__r.Last_Payment_Schedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last</label>
    <type>Checkbox</type>
</CustomField>