force-app/main/default/objects/Demand_Raised__c/fields/Parent_Demand__c.field-meta.xml
<CustomField>
    <fullName>Parent_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Demand</label>
    <referenceTo>Demand_Raised__c</referenceTo>
    <relationshipLabel>Demand Raised</relationshipLabel>
    <relationshipName>Demand_Raised</relationshipName>
    <type>Lookup</type>
</CustomField>