force-app/main/default/objects/Demand_Raised__c/fields/Previous_pendings__c.field-meta.xml
<CustomField>
    <fullName>Previous_pendings__c</fullName>
    <label>Previous pendings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>