force-app/main/default/objects/Demand_Raised__c/fields/Total_Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Paid__c</fullName>
    <label>Total Interest Paid</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>