force-app/main/default/objects/Demand_Raised__c/fields/Total_Percentage_till_Current_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Total_Percentage_till_Current_Milestone__c</fullName>
    <label>Total Percentage till Current Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>